--- a/senguo.cc/admin/templates/customer/cart.html
+++ b/senguo.cc/admin/templates/customer/cart.html
@@ -6,7 +6,11 @@
 {% end %}
 {% block content %}
     <span id="shop_imgurl" data-img="{{shop_logo}}" data-code="{{handler.shop_code}}"></span>
-    <div class="rainshed bg_change fix-title"></div>
+    {% if shop_tpl == 0 %}
+    <div class="rainshed fix-title"></div>
+    {% else %}
+    <div class="rainshed_beauty fix-title"></div>
+    {% end %}
     <div class="bg-box">
         <p class="text-left text-grey9 font14  pl10 cart-titles">商品列表</p>
         <ul class="cart-list set-w100-fle m-b0">
