--- a/senguo.cc/admin/templates/bingo/personal-center.html
+++ b/senguo.cc/admin/templates/bingo/personal-center.html
@@ -5,7 +5,7 @@
 {% end %}
 {% block content %}
     <span id="shop_imgurl" data-img="{{shop_logo}}"></span>
-    <div class="rainshed2 text-center font18 text-white bg_change fix-title"></div>
+    <div class="rainshed_beauty text-center font18 text-white bg_change fix-title"></div>
     <div class="user-info box-style m-b5 clearfix font16 text-center mt42">
         <a href="{{reverse_url('customerProfile')}}" class="user-img text-grey3">
             <div class="wrap-img"><img src="{{current_user.accountinfo.headimgurl or '/static/images/TDSG_l.png'}}" class="img img-circle"/></div>
