--- a/senguo.cc/admin/templates/customer/discover.html
+++ b/senguo.cc/admin/templates/customer/discover.html
@@ -6,8 +6,10 @@
 {% block content %}
 {% if shop_tpl == 0 %}
 <div class="rainshed2 fix-title"></div>
-{% else %}
+{% elif shop_tpl == 1 %}
 <div class="rainshed_beauty fix-title"></div>
+{% else %}
+<div class="rainshed_bingo fix-title"></div>
 {% end %}
 
 <div class="mt42"></div>
