--- a/senguo.cc/admin/templates/customer/cart-empty.html
+++ b/senguo.cc/admin/templates/customer/cart-empty.html
@@ -7,7 +7,13 @@
 </style>
 {% end %}
 {% block content %}
-<div class="rainshed bg_change"></div>
+{% if shop_tpl == 0 %}
+<div class="rainshed2"></div>
+{% elif shop_tpl == 1 %}
+<div class="rainshed_beauty"></div>
+{% else %}
+<div class="rainshed_bingo"></div>
+{% end %}
 <div class="block-index">
     <a href="{{reverse_url('Market',handler.shop_code)}}" class="link">
         <img src="/static/images/empty_l.png" alt="购物篮中没有商品" class="center-block src_change w210"/>
