--- a/senguo.cc/admin/templates/customer/cart.html
+++ b/senguo.cc/admin/templates/customer/cart.html
@@ -8,8 +8,10 @@
     <span id="shop_imgurl" data-img="{{shop_logo}}" data-code="{{handler.shop_code}}"></span>
     {% if shop_tpl == 0 %}
     <div class="rainshed fix-title"></div>
-    {% else %}
+    {% elif shop_tpl == 1 %}
     <div class="rainshed_beauty fix-title"></div>
+    {% else %}
+    <div class="rainshed_bingo fix-title"></div>
     {% end %}
     <div class="bg-box">
         <p class="text-left text-grey9 font14  pl10 cart-titles">商品列表</p>
