--- a/senguo.cc/admin/templates/customer/shop-info.html
+++ b/senguo.cc/admin/templates/customer/shop-info.html
@@ -18,8 +18,10 @@
 <span id="shop_imgurl" data-img="{{shop_logo}}"></span>
 {% if shop_tpl == 0 %}
 <div class="rainshed text-center font18 text-black fix-title">店铺详情</div>
-{% else %}
+{% elif shop_tpl == 1 %}
 <div class="rainshed_beauty text-center font18 text-black fix-title">店铺详情</div>
+{% else %}
+<div class="rainshed_bingo text-center font18 text-black fix-title">店铺详情</div>
 {% end %}
 <div class="info1 bg-white clearfix mt42 pt20">
     <div class="shop-logo pull-left">
