--- a/senguo.cc/admin/templates/bingo/home.html
+++ b/senguo.cc/admin/templates/bingo/home.html
@@ -4,6 +4,10 @@
 <link rel="stylesheet" href="/static/css/idangerous.swiper.css"/>
 <link rel="stylesheet" href="{{static_url('css/market-home.css')}}"/>
 <link rel="stylesheet" href="{{static_url('css/fruit-color.css')}}"/>
+<style>
+.bottom-nav li a em{display:inline-block;background:url('/static/svg/icon_list_bingo.png') no-repeat;width:21px;height:21px;margin:0 auto;background-size:140px;overflow:hidden;}
+.bottom-nav .active a, .bottom-nav li:hover a{color:#44C798!important;}
+</style>
 {% end %}
 {% block content %}
 {% set notices=context['notices']%}
