--- a/senguo.cc/admin/templates/bingo/personal-center.html
+++ b/senguo.cc/admin/templates/bingo/personal-center.html
@@ -2,6 +2,10 @@
 {% block title %}【{{shop_name}}】一家不错的O2O店铺，快来关注吧~{% end %}
 {% block head %}
 <link rel="stylesheet" href="{{static_url('css/market-center.css')}}"/>
+<style>
+.bottom-nav li a em{display:inline-block;background:url('/static/svg/icon_list_bingo.png') no-repeat;width:21px;height:21px;margin:0 auto;background-size:140px;overflow:hidden;}
+.bottom-nav .active a, .bottom-nav li:hover a{color:#44C798!important;}
+</style>
 {% end %}
 {% block content %}
     <span id="shop_imgurl" data-img="{{shop_logo}}"></span>
