--- a/senguo.cc/admin/templates/customer/cart-empty.html
+++ b/senguo.cc/admin/templates/customer/cart-empty.html
@@ -5,6 +5,16 @@
 .block-index{width:100%;height:100%;padding-top:100px;max-width:800px;}
 .w210{width:210px;}
 </style>
+{% if shop_tpl == 1 %}
+<style>
+.bottom-nav li a em{display:inline-block;background:url('/static/svg/icon_list_beauty.png') no-repeat;width:21px;height:21px;margin:0 auto;background-size:140px;overflow:hidden;}
+</style>
+{% elif shop_tpl == 2 %}
+<style>
+.bottom-nav li a em{display:inline-block;background:url('/static/svg/icon_list_bingo.png') no-repeat;width:21px;height:21px;margin:0 auto;background-size:140px;overflow:hidden;}
+.bottom-nav .active a, .bottom-nav li:hover a{color:#44C798!important;}
+</style>
+{% end %}
 {% end %}
 {% block content %}
 {% if shop_tpl == 0 %}
