--- a/senguo.cc/admin/templates/customer/cart.html
+++ b/senguo.cc/admin/templates/customer/cart.html
@@ -3,6 +3,16 @@
 {% block head %}
 <link rel="stylesheet" href="{{static_url('css/market-cart.css')}}"/>
 <link rel="stylesheet" href="{{static_url('css/fruit-color.css')}}"/>
+{% if shop_tpl == 1 %}
+<style>
+.bottom-nav li a em{display:inline-block;background:url('/static/svg/icon_list_beauty.png') no-repeat;width:21px;height:21px;margin:0 auto;background-size:140px;overflow:hidden;}
+</style>
+{% elif shop_tpl == 2 %}
+<style>
+.bottom-nav li a em{display:inline-block;background:url('/static/svg/icon_list_bingo.png') no-repeat;width:21px;height:21px;margin:0 auto;background-size:140px;overflow:hidden;}
+.bottom-nav .active a, .bottom-nav li:hover a{color:#44C798!important;}
+</style>
+{% end %}
 {% end %}
 {% block content %}
     <span id="shop_imgurl" data-img="{{shop_logo}}" data-code="{{handler.shop_code}}"></span>
