--- a/senguo.cc/admin/templates/admin/shop-notice-set.html
+++ b/senguo.cc/admin/templates/admin/shop-notice-set.html
@@ -36,7 +36,7 @@
                 <a href="javascript:;" class="edit-btn2 info-edit">编辑</a>
             </td>
             <td class="address-edit" style="display:none;">
-                <a href="javascript:;" class="edit-btn2 info-sure notice_edit">确定</a>
+                <a href="javascript:;" class="edit-btn2 info-sure notice_edit bg-green text-white">确定</a>
             </td>
         </tr>
         {% end %}
