--- a/senguo.cc/admin/static/css/admin-global.css
+++ b/senguo.cc/admin/static/css/admin-global.css
@@ -196,7 +196,7 @@ img{border:none;}
 .text-orange{color:#E07D14;}
 .text-orange2{color:#ec6b10}
 .text-black{color:#222;}
-.text-center{text-align:center;}
+.text-center{text-align:center;text-indent:0;}
 .text-link{color:#6ba4ef!important;}
 .name-link{color:#6ba4ef!important;text-overflow:ellipsis;overflow:hidden;white-space:nowrap;}
 
