--- a/senguo.cc/admin/templates/admin/market-base.html
+++ b/senguo.cc/admin/templates/admin/market-base.html
@@ -23,7 +23,7 @@
 <ul class="subnav  group">
     <li class="{{love_wall_active}}" id="infoSet"><a href="{{reverse_url('adminMarketing')}}?action=lovewall">告白墙</a></li>
     <li class="{{coupon_active}}" id="coupon"><a href="{{reverse_url('adminMarketing')}}?action=coupon&coupon_type=0"><b class="" id="is_balance"></b>优惠券</a></li>
-    <li class="{{seckill_active}}" id="seckill"><a href="{{reverse_url('adminMarketing')}}?action=seckill&page=0"><b id="is_active"></b>商品秒杀</a></li>
+    <li class="{{seckill_active}}" id="seckill"><a href="{{reverse_url('adminMarketingSeckill')}}?action=seckill&page=0"><b id="is_active"></b>商品秒杀</a></li>
     <!-- <li class="{{no_auth}}" id="noticeSet"><a href="#">商品预售</a></li> -->
 </ul>
 </div>
