--- a/senguo.cc/admin/templates/admin/seckill-detail.html
+++ b/senguo.cc/admin/templates/admin/seckill-detail.html
@@ -9,7 +9,7 @@
 {% set shop_code = current_shop.shop_code %}
 <div class="font14">　
                <p class="c333 mt10 choose-text">
-                             <a href="{{reverse_url('adminMarketing')}}?action=seckill" class="c999 cancel-add-goods">商品秒杀</a>
+                             <a href="{{reverse_url('adminMarketingSeckill')}}?action=seckill" class="c999 cancel-add-goods">商品秒杀</a>
                              <span class="c333"> / 秒杀详情</span>
                </p>
 </div>
