--- a/senguo.cc/admin/static/css/admin-marketing.css
+++ b/senguo.cc/admin/static/css/admin-marketing.css
@@ -93,7 +93,7 @@ tr{border-left:1px solid #eee;border-right:1px solid #eee;border-bottom:1px soli
 .cancel-add-goods{display: inline-block;background-size: 18px;background-image: url('/static/images/admin_back.png');background-repeat: no-repeat;background-position: left center;text-indent: 22px;}
 .wrap-pop-btn{background-color: #fbfbfb;border:1px solid #eee;border-top:none;padding: 10px 0;text-align: center;}
 .wrap-pop-btn>a{display: inline-block;width: 90px;text-align: center;font-size: 14px;height: 28px;line-height: 28px;border-radius: 2px;border: 1px solid #e7e7eb;}
-.ok-btn{background-color: #33CC66;color: #fff;margin-right: 20px;}
+.ok-btn{background-color: #52b43f;color: #fff;margin-right: 20px;}
 .cancel-btn{background-color: #fff;color: #333;}
 .coupon-row{height: 28px;vertical-align: middle;line-height: 28px;}
 .ver7{vertical-align: 7px;}
@@ -109,5 +109,25 @@ tr{border-left:1px solid #eee;border-right:1px solid #eee;border-bottom:1px soli
 .category-list{font-size: 14px;}
 
 /*限时折扣添加样式*/
-.week-btn{width: 50px;display:inline-block;margin-left:20px;font-size: 14px;background-color: #ccc;color: #fff;text-align: center;height: 28px;line-height: 28px;border-radius: 2px;}
+.week-btn{width: 50px;display:inline-block;margin-left:15px;font-size: 14px;background-color: #fff;color: #000;text-align: center;height: 28px;line-height: 28px;border-radius: 2px;}
 .back_green{background-color: #52b43f;}
+.back_gray{background-color: #f4f5f9;}
+.back_red{background-color: #ff6666;}
+.text_red{color: #ff6666;}
+.text_green{color: #52b43f;}
+.text_gray{color: #8d8d8d}
+.discount_delete{margin-left: 420px;}
+.wrap-discounttb{background-color: #f4f5f9;-webkit-box-sizing: border-box;padding: 15px 0 20px 20px;}
+.discount-detail{width: 700px;margin-left: 100px;}
+.no_border{border: 0px;background-color: #fff;}
+.discount_rate{margin-left: 25px}
+.use_group{margin-left: 10px}
+.charge-type{border: none;}
+.send-day .btn{padding:5px 10px;font-size:12px;margin-right:5px;}
+.send-day .active{background:#44b549;color:#fff;}
+.time-btn-width{width: 45px}
+.text-below{vertical-align: 6px}
+.discount-tip{margin-left: 150px;margin-bottom: 10px}
+.charge-btn{width: 85px;display:inline-block;margin-left:15px;font-size: 1px;color: #000;text-align: center;height: 28px;line-height: 28px;border-radius: 2px;}	
+.mode-cm{display:inline-block;border-radius:30px;width:100px;height:32px;position:relative;line-height:30px;font-size:14px;top:-45px;}
+.mode-cm .circle{display:inline-block;width:28px;height:28px;background:#fff;border-radius:50%;position:absolute;top:2px;}
