--- a/senguo.cc/admin/templates/admin/discount-detail.html
+++ b/senguo.cc/admin/templates/admin/discount-detail.html
@@ -5,11 +5,11 @@
 {% set shop_code = current_shop.shop_code %}
 <div class="wrap-coupontitle">
     <div class="c333 mt10 choose-text">
-        <a href="/discount/main?action=discount" class="c999 cancel-add-goods ">限时折扣</a>
+        <a href="/discount?action=discount" class="c999 cancel-add-goods ">限时折扣</a>
         <span class="c333"> / 折扣详情</span>
     </div>
 </div>
-<div class="wrap-newcoupon mt20">
+<div class="wrap-newcoupon mt20 discount-detail">
     <table class="tb-enty tb-active">
         <thead>
          <colgroup>
