tpl2 when sold_out text turn grey

--- a/senguo.cc/admin/static/css/market-home.css
+++ b/senguo.cc/admin/static/css/market-home.css
@@ -183,6 +183,7 @@
 .more-group{position: absolute;top: 100%;left: -1px;width: 100%;max-height: 200px;overflow: hidden;overflow-y: auto;-webkit-overflow-scrolling:touch;background-color: #63C5A2;z-index:999;}
 .more-group>li{height: 40px;line-height: 40px;text-align: center;color: #fff;border-bottom: 1px solid #CCCCCC;padding: 0 4px;white-space: nowrap;}
 .more-group>li:last-child{border-bottom: none;}
+.desaturate{color:#ccc;}
 .desaturate .roll-btn{background-color:#ccc;}
 
 
