--- a/senguo.cc/admin/templates/admin/shop-notice-set.html
+++ b/senguo.cc/admin/templates/admin/shop-notice-set.html
@@ -33,7 +33,7 @@
                 </div>
             </td>
             <td class="address-show">
-                <a href="javascript:;" class="edit-btn2 info-edit">编辑</a>
+                <a href="javascript:;" class="edit-btn2 notice-edit">编辑</a>
             </td>
             <td class="address-edit" style="display:none;">
                 <a href="javascript:;" class="edit-btn2 info-sure notice_edit bg-green text-white text-center">确定</a>
