--- a/senguo.cc/admin/templates/customer/home.html
+++ b/senguo.cc/admin/templates/customer/home.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="{{static_url('css/market-home.css')}}"/>
 <link rel="stylesheet" href="{{static_url('css/fruit-color.css')}}"/>
 {% end %}
+{% block topHeader %}{%end%}
 {% block content %}
 {% set notices=context['notices']%}
 {% import json%}
