--- a/senguo.cc/admin/templates/customer/discover.html
+++ b/senguo.cc/admin/templates/customer/discover.html
@@ -2,29 +2,11 @@
 {% block title %}发现{% end %}
 {% block head %}
 <link rel="stylesheet" href="{{static_url('css/market-center.css')}}"/>
-{% if shop_tpl == 1 %}
-<style>
-.bottom-nav li a em{display:inline-block;background:url('/static/svg/icon_list_beauty.png') no-repeat;width:21px;height:21px;margin:0 auto;background-size:140px;overflow:hidden;}
-</style>
-{% elif shop_tpl == 2 %}
-<style>
-.bottom-nav li a em{display:inline-block;background:url('/static/svg/icon_list_bingo.png') no-repeat;width:21px;height:21px;margin:0 auto;background-size:140px;overflow:hidden;}
-.bottom-nav .active a, .bottom-nav li:hover a{color:#44C798!important;}
-</style>
-{% end %}
 {% end %}
 {% block content %}
-{% if shop_tpl == 0 %}
-<div class="rainshed2 fix-title"></div>
-{% elif shop_tpl == 1 %}
-<div class="rainshed_beauty fix-title"></div>
-{% else %}
-<div class="rainshed_bingo fix-title"></div>
-{% end %}
-
 <div class="mt42"></div>
 <ul class="mt20 discover-list">
-{% if shop_auth != 0%}
+{% if handler.shop_auth != 0%}
 {% if confess_active == 1%}
     <li class="title clearfix bg-white font14 confess">
 	    <a href="{{reverse_url('ConfessionHome',handler.shop_code)}}" class="text-grey3 confess-wall">
