--- a/senguo.cc/admin/static/css/admin-marketing.css
+++ b/senguo.cc/admin/static/css/admin-marketing.css
@@ -139,4 +139,5 @@ tr{border-left:1px solid #eee;border-right:1px solid #eee;border-bottom:1px soli
 .ver-8 {vertical-align: 8px;}
 .w110{width: 110px;}
 
+.edit-activity{z-index: 2999;font-size: 16px;}
 /**/
