--- a/senguo.cc/admin/templates/admin/seckill.html
+++ b/senguo.cc/admin/templates/admin/seckill.html
@@ -12,7 +12,7 @@
                              <p class="mt20"><a href="/bbs/detail/88" target="_blank" class="font14">点击查看使用教程</a></p>
                </div>  
                <div class="col-sm-3 col-md-3">
-                             <a class="mode  pull-right mt10 open-switch work-mode" data-flag="on" title="点击切换状态" data-status="1"><span class="tit">已启用</span><span class="circle"></span></a>
+                             <a class="mode  pull-right mt10 open-switch" data-flag="off" title="点击切换状态" data-status="{{seckill_active2}}"><span class="tit"></span><span class="circle"></span></a>
                </div>
 </div>
 
@@ -26,10 +26,10 @@
                </div>
                <div class="subnav-box group mt20">
                              <ul class="status-choose subnav chinav furit-type pull-left">
-                                           <li class="txt-center active" data-type="nostart"><a href="javascript:;">未开始</a></li>
-                                           <li class="txt-center" data-type="killing"><a href="javascript:;">进行中</a></li>
-                                           <li class="txt-center" data-type="finished"><a href="javascript:;">已结束</a></li>
-                                           <li class="txt-center" data-type="stoped"><a href="javascript:;">已停用</a></li>
+                                           <li class="txt-center active nostart" data-type="nostart"><a href="javascript:;">未开始</a></li>
+                                           <li class="txt-center killing" data-type="killing"><a href="javascript:;">进行中</a></li>
+                                           <li class="txt-center finished" data-type="finished"><a href="javascript:;">已结束</a></li>
+                                           <li class="txt-center stoped" data-type="stoped"><a href="javascript:;">已停用</a></li>
                              </ul>
                              
                </div>　　　　
@@ -52,22 +52,38 @@
                                                           </tr>
                                             </thead>
                                             <tbody class="seckill-list">
+                                                          {% if len(output_data) == 0%}
                                                           <tr>
-                                                                        <td colspan="5" class="txt-center c999 font14">没有当前状态的秒杀活动</td>
+                                                                        <td colspan="5" class="txt-center c999 font14" data-id="0">没有当前状态的秒杀活动</td>
                                                           </tr>
-                                                          <tr>　　 
-                                                                        <td colspan="1"> 2015-08-08 00:00:00</td>
-                                                                        <td colspan="1">00:05:00</td>
-                                                                        <td colspan="1">烟台大苹果、小猕猴桃、大菠萝、榴莲香蕉、哈密瓜、爪哇国鸡翅、美国大碗牛肉面等19种商品</td>
-                                                                        <td colspan="1">100 / 70</td>
+                                                          {% else %}
+                                                          {% for data in output_data%}
+                                                          <tr data-id="{{data['activity_id']}}">　　 
+                                                                        <td colspan="1">{{data['start_time']}}</td>
+                                                                        <td colspan="1">{{data['continue_time']}}</td>
+                                                                        <td colspan="1">{{data['goods_list']}}</td>
+                                                                        <td colspan="1">{{data['picked']}} / {{data['ordered']}}</td>
                                                                         <td colspan="1">　　
-                                                                                       <a href="javascript:;">编辑</a>
+                                                                                       <a href="javascript:;" class="edit-activity" title="点击编辑此秒杀活动">编辑</a>
                                                                                        <a href="javascript:;" class="ml10">推广</a>
                                                                                        <a href="javascript:;" class="ml10">停用</a>
                                                                         </td>
                                                           </tr>
+                                                          {% end %}
+                                                          {% end %}
                                             </tbody>
                              </table>    
+              </div>
+              <div class="users-pagination list-pagination group sec-pager" page-sum="{{page_sum}}">
+                      <ul>
+                             <li><a href="javascript:;" class="page-btn pre-page sec-pre-page hidden">&nbsp;</a></li>
+                             <li>
+                                    <span class="sec-page-now page-now">1</span>/<span class="page-total sec-page-total">{{page_sum}}</span>
+                             </li>
+                             <li><a href="javascript:;" class="page-btn next-page sec-next-page {% if page_sum == 1%}hidden{% end %}">&nbsp;</a></li>
+                             <li><input class="sec-input-page  input-page form-control" type="text" placeholder="输入页码"></li>
+                             <li><a href="javascript:;" class="sec-jump-to jump-to">跳转</a></li>
+                      </ul>
               </div>
 </div>
     
